.work/must-gather-analysis/registry-build11-ci-openshift-org-ci-ln-vjb5l1t-stable-sha256-f89169f1cf6fd47be50038cc1c80be38e4fb997d7805094b3f6e50034f9c4c20/cluster-scoped-resources/admissionregistration.k8s.io/validatingadmissionpolicybindings/default-network-annotation-binding.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  creationTimestamp: "2026-01-28T09:29:23Z"
  generation: 1
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:ownerReferences:
          k:{"uid":"7763cebb-f1d7-4359-81b8-b55ef9916383"}: {}
      f:spec:
        f:matchResources: {}
        f:policyName: {}
        f:validationActions:
          v:"Deny": {}
    manager: cluster-network-operator/operconfig
    operation: Apply
    time: "2026-01-28T09:29:23Z"
  name: default-network-annotation-binding
  ownerReferences:
  - apiVersion: operator.openshift.io/v1
    blockOwnerDeletion: true
    controller: true
    kind: Network
    name: cluster
    uid: 7763cebb-f1d7-4359-81b8-b55ef9916383
  resourceVersion: "4416"
  uid: 6e7b4811-6e6b-4682-8e84-a055d90adb70
spec:
  matchResources:
    matchPolicy: Equivalent
    namespaceSelector: {}
    objectSelector: {}
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - UPDATE
      resources:
      - pods
      scope: '*'
  policyName: default-network-annotation
  validationActions:
  - Deny
