.work/must-gather-analysis/registry-build11-ci-openshift-org-ci-ln-vjb5l1t-stable-sha256-f89169f1cf6fd47be50038cc1c80be38e4fb997d7805094b3f6e50034f9c4c20/cluster-scoped-resources/admissionregistration.k8s.io/validatingadmissionpolicybindings/servicecidrs-binding.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  creationTimestamp: "2026-01-28T09:29:31Z"
  generation: 1
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:ownerReferences:
          k:{"uid":"7763cebb-f1d7-4359-81b8-b55ef9916383"}: {}
      f:spec:
        f:policyName: {}
        f:validationActions:
          v:"Deny": {}
    manager: cluster-network-operator/operconfig
    operation: Apply
    time: "2026-01-28T09:29:31Z"
  name: servicecidrs-binding
  ownerReferences:
  - apiVersion: operator.openshift.io/v1
    blockOwnerDeletion: true
    controller: true
    kind: Network
    name: cluster
    uid: 7763cebb-f1d7-4359-81b8-b55ef9916383
  resourceVersion: "4714"
  uid: fdfd8339-06e7-47a7-9700-604f23b3afef
spec:
  policyName: servicecidrs.openshift.io
  validationActions:
  - Deny
